--- a/articles/config.yml
+++ b/articles/config.yml
@@ -17,12 +17,12 @@ review_version: 5.0
 # inherit: ["A.yml", "B.yml"]
 
 # ブック名(ファイル名になるもの。ASCII範囲の文字を使用)
-bookname: keep-writing-anyway-vol1
+bookname: anyway-keep-writing-vol1
 # 記述言語。省略した場合はja
 language: ja
 
 # 書名
-booktitle: {name: "KEEP WRITING ANYWAY", file-as: "キープライティングエニウェイ"}
+booktitle: {name: "Anyway, Keep Writing!", file-as: "キープライティングエニウェイ"}
 subtitle: {name: "vol. 1", file-as: "ボリュームワン"}
 
 # 著者名。「, 」で区切って複数指定できる
@@ -91,7 +91,7 @@ rights: (C) 2025 mochikoAsTech
 debug: null
 
 # 固有IDに使用するドメイン。省略した場合は時刻に基づくランダムUUIDが入る
-urnid: urn:uuid:https://github.com/mochikoAsTech/keep-writing-anyway-vol1
+urnid: urn:uuid:https://github.com/mochikoAsTech/anyway-keep-writing-vol1
 #
 # ISBN。省略した場合はurnidが入る
 # isbn: null
